# docsup

./: .gitignore  README.md  hello.py  pyproject.toml
crawls/: README.md  heritrix.service
crawls/2024-04-SOZPHIL-TEST-7/: .gitignore  crawler-beans.cxml
data/: .gitignore  2024-04-SOZPHIL-TEST-7-pdf-urls.txt  2024-04-SOZPHIL-TEST-7-pdf-urls.warc.cdx  Makefile  README.md  tree.txt  urls.txt
notes/: 2024-04-02-kickoff.md  2024-04-10-architecture.md  2024-04-10-data-prep.md  2024-04-23-meeting.md  2024-05-24-meeting.md  2024-08-05-recap.md  2024-08-07-meeting.md  2025-01-09-sketch.md  2025-01-14-rerun.md  2025-01-17-meilisearch-basic-setup.md
scripts/: md.py  unwrap.py
