[project]
name = "docsup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.2",
    "docling>=2.15.1",
    "ipython>=8.31.0",
    "langchain>=0.3.14",
    "meilisearch>=0.33.1",
    "pypdf>=5.1.0",
    "pytest>=8.3.4",
    "tqdm>=4.67.1",
    "warcio>=1.7.5",
]
